# lms-gui-rs

./: .gitignore  AGENTS.md  Cargo.toml  LESSONS.md  README.md  SCRATCHPAD.md  STATISTICS.md  TODO.md  build.rs  deploy.py  package-lock.json  package.json  playwright.config.ts
.kiro/steering/: no-hardcoded-hosts.md
docs/reports/: profile-lms-gui-rs-2026-06-28.md
docs/scratchpad-archive/: 20260628-0057.md
scripts/: archive-bench-to-vault.sh
src/: db.rs  handlers.rs  lms_client.rs  main.rs  models.rs  stats.rs
src/handlers/: api.rs  chat.rs  mod.rs  pages.rs
templates/: api.html  base.html  changelog.html  chat.html  dashboard.html  logs.html  models.html  runtime.html  stats.html
tests/: seed.spec.ts
